Actualizacion de proyecto

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=(Ur$07121998
+DB_PASSWORD=Nacien1990
 DB_NAME=bookstore
 JWT_SECRET=TuNuevoSecretoUltraSeguro123!$%&/
 PORT=5000
